--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,11 @@
 PORT = 8000
+CORS_ORIGIN =*
+
+
+
+
+
+
+
+
 mongodb+srv://nirajx220:your-passwoard@cluster0.segbzwo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
