--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 PORT = 8000
 CORS_ORIGIN =*
+ACCESS_TOKEN_SECRET=awshxdgd0988xvxgdvnddjksnvkjg24210i9fkjsjeanvknjvnxdsdfs1
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=1234rtdr35436i46tyesrdyftguh6t56768g
+REFRESH_TOKEN_EXPIRY=10d
 
 
 
